<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@color/key_color">

    <TextView
        android:id="@+id/about_text"
        style="@style/body_text"
        android:text="@string/about_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/my_git_url"
        style="@style/link_text"
        android:text="@string/link_my_git"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_text"/>

    <TextView
        android:id="@+id/att_background_text"
        style="@style/body_text"
        android:layout_marginTop="30dp"
        android:text="@string/attribution_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_git_url"/>
    <TextView
        android:id="@+id/att_background_url"
        style="@style/link_text"
        android:text="@string/link_att_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/att_background_text"/>

    <TextView
        android:id="@+id/att_toon_text"
        style="@style/body_text"
        android:text="@string/attribution_toon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/att_background_url"/>
    <TextView
        android:id="@+id/att_toon_url"
        style="@style/link_text"
        android:text="@string/link_att_toon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/att_toon_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>